"fix: align the dashboard slider vertically at the center"

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ body {
 .overflow-y-auto::-webkit-scrollbar {
     display: none; /* WebKit */
 }
+
+#root {
+    height: 100%;
+}
